# Tetra

./: Cargo.toml  README.md
locale-examples/: messages.po
src/: lib_style.rs  libstyle.rs  main.rs
