[package]
name = "tetra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = {version = "0.7.0", features = ["gettext-system"]}
iced = "0.10.0"
iced_aw = {version = "0.6.0", features = ["color_picker"]}
iced_style = "0.9.0"
serde = "1.0.159"
serde_derive = "1.0.159"
toml = "0.7.3"
whoami = "1.4.0"
