[package]
name = "tetra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = {version = "0.7.0", features = ["gettext-system"]}
iced = "0.10.0"
iced_aw = {version = "0.7.0", features = ["color_picker"]}
oceania_style = { git = "https://github.com/Eclipse32767/oceania_style.git", version = "0.1.1" }
iced_style = "0.9.0"
serde = "1.0.159"
serde_derive = "1.0.159"
toml = "0.8.4"
whoami = "1.4.0"
